add github link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2 data-testid="currentDayOfTheWeek">Monday</h2>
         <h3 data-testid="currentUTCTime"></h3>
         <h4 data-testid="myTrack">Front-End</h4>
-        <a data-testid="githubURL" target="_blank" href="https://github.com/MillieMuteti/">Github Repository</a>
+        <a data-testid="githubURL" target="_blank" href="https://github.com/MillieMuteti/HNGx-frontend">Github Repository</a>
     </main>
  <script src="./scripts.js"></script>   
 </body>
